--- a/07/report/report.tex
+++ b/07/report/report.tex
@@ -3,7 +3,7 @@
 \author{情報科学類, 3年, 2クラス, 学籍番号：201311403 \ 山岡 洸瑛, Yamaoka
 Kouei}
 \西暦
-\date{\today}
+\date{2016年1月27日}
 
 %余白設定
 \setlength{\topmargin}{20mm}
@@ -47,17 +47,102 @@ tabsize=2
 \maketitle
 
 \section*{AS（Ant System）による巡回セールスマン問題の解決}
-\section*{状況}
-デバッグに手間取り，レポートが完成しなかった．プログラムは完成しているため，ごく簡単な報告のみを行い，レポートは1月27日（水）に提出する．
-\subsection*{実験結果}
-図1にパラメータが$\alpha=1, \beta=2, \rho = 0.5$として，巡回セールスマン問題eil51を計算した時の最良解の推移を示す．シード値は509とした．
-\begin{figure}[htb]
+\section*{実験}
+\subsection*{パラメータの決定}
+巡回セールスマン問題eil51に対してパラメータ$\beta$の最適値を求める．その他のパラメータは与えられたものを使うため省略する．パラメータの調整は，乱数の初期値を変えて10回計算し，その結果を用いて行った．表\ref{beta}に$\beta$を2から5まで変えた時の順回路長（最良解）と反復回数の平均値と標準偏差を示す．表\ref{beta}より順回路長は$\beta=2$で最小になっているが，標準偏差が大きい．$\beta=3$としても順回路長はあまり変わらず，かつ標準偏差が小さくなるため，$\beta=3$とする．なお，シード値は{509, 521, 523, 541, 547, 557, 563, 569,571, 577}とした．
+\begin{table}[H]
  \begin{center}
-  \includegraphics[width=20cm, clip, bb=-50 0 546 322]{test.jpg}
+  \label{beta}
+  \caption{各$\beta$毎の実験結果}
+  \begin{tabular}[tb]{|c|c|c|c|c|}\hline
+    &$ \beta = 2 $&$ \beta = 3 $&$ \beta = 4 $&$ \beta = 5 $\\\hline
+巡回路長の平均 & 438 & 439 & 440 & 439 \\\hline
+標準偏差 & 4.77 & 2.72 & 3.71 & 3.71 \\\hline
+反復回数の平均 & 2065 & 2057 & 2139 & 2143 \\\hline
+標準偏差 & 479.71 & 485.93 & 1196.74 & 816.91 \\\hline
+  \end{tabular}
+ \end{center}
+\end{table}
+
+\par 以下にパラメータの一覧を示す．念の為，与えられた物も示した．
+\begin{itemize}
+ \item $\alpha = 1$
+ \item $\beta = 3$
+ \item アリの数$m$ = 都市数$n$
+ \item $\rho = 0.5$
+\end{itemize}
+
+\subsection*{実験結果}
+示したパラメータで実験を行った．その結果を表\ref{result}に示す．表には各問題を乱数の初期値を変えて10回行い，最良解の順回路長（括弧内は最適解）と反復回数の平均値と標準偏差を示している．また，順回路長については，標準偏差を平均値で割った変動係数も示した．これにより，大まかには全ての問題で標準偏差の大きさが揃っていると言える．
+
+\begin{table}[H]
+ \begin{center}
   \caption{実験結果}
-  \label{nasi}
+  \label{result}
+  \begin{tabular}[tb]{|c|c|c|c|c|c|} \hline
+ & eil51 & pr76 & rat99 & kroA100 & ch130 \\\hline
+巡回路長の平均 & 439（426） & 114921（108159） & 1266（1211） & 22495（21282） & 6473（6110） \\\hline
+標準偏差 & 2.72 & 1061.45 & 7.28 & 155.83 & 53.55 \\\hline
+変動係数 & 0.0062 & 0.0092 & 0.0058 & 0.0069 & 0.0083 \\ \hline
+反復回数の平均 & 2057 & 1715 & 1844 & 2074 & 1942 \\\hline
+標準偏差 & 485.93 & 611.57 & 641.99 & 591.9 & 585.08 \\\hline
+  \end{tabular}
+ \end{center}
+\end{table}
+
+\subsection*{最良解の順回路長の推移}
+各問題の最良解の順回路長の推移のグラフを図\ref{00}から図\ref{44}に示す．なお，シード値は10回の試行における最良解を出したものとした．
+
+\subsubsection*{・eil51}
+シード値は571．最適解426に対して，最良解は435．
+\begin{figure}[H]
+ \begin{center}
+  \includegraphics[width=15cm, clip, bb=-75 0 442 266]{pic/00.jpg}
+  \caption{eil51の最良解の推移}
+  \label{00}
  \end{center}
 \end{figure}
+\clearpage
+\subsubsection*{・pr76}
+シード値は521．最適解108159に対して，最良解は112608．
+\begin{figure}[H]
+ \begin{center}
+  \includegraphics[width=15cm, clip, bb=-75 0 455 266]{pic/11.jpg}
+  \caption{pr76の最良解の推移}
+  \label{11}
+ \end{center}
+\end{figure}
+\subsubsection*{・rat99}
+シード値は547．最適解1211に対して，最良解は1251．
+\begin{figure}[H]
+ \begin{center}
+  \includegraphics[width=15cm, clip, bb=-75 0 441 265]{pic/22.jpg}
+  \caption{rat99の最良解の推移}
+  \label{22}
+ \end{center}
+\end{figure}
+\clearpage
+\subsubsection*{・kroA100}
+シード値は577．最適解21282に対して，最良解は22411．
+\begin{figure}[H]
+ \begin{center}
+  \includegraphics[width=15cm, clip, bb=-75 0 453 264]{pic/33.jpg}
+  \caption{kroA100の最良解の推移}
+  \label{33}
+ \end{center}
+\end{figure}
+\subsubsection*{・ch130}
+シード値は509．最適解6110に対して，最良解は6372．
+\begin{figure}[H]
+ \begin{center}
+  \includegraphics[width=15cm, clip, bb=-75 0 447 266]{pic/44.jpg}
+  \caption{ch130の最良解の推移}
+  \label{44}
+ \end{center}
+\end{figure}
+
+
+
 
 \subsection*{ソースコード}
 リスト1にソースコードを示す．なお，変数宣言や，巡回セールスマン問題の読み込みなど，重要でないと思われる部分は省略している．
@@ -66,21 +151,14 @@ int main(int argc, char *argv[]){
 
   int eucArray[cityNum][cityNum];
   int check[m][cityNum]; // for check to passed city
-  int solution[cityNum];
   int solutions[m][cityNum];
   double tau[cityNum][cityNum]; // pheromone
-
   double p[m][cityNum]; // selection probability
   int tourLength[cityNum];
   int c1, c2; // selected city
   int bs = INT_MAX; // tour length @best solution
 
   // calc EUC_2D
-  // init diagonal 
-  for(i=0; i<cityNum; i++){
-    eucArray[i][i] = 0;
-  }
-  // calc 
   for(i=0; i<cityNum; i++){
     for(j=i+1; j<cityNum; j++){
       tmp = calcEuc(X[i], X[j], Y[i], Y[j]);
@@ -152,10 +230,12 @@ int main(int argc, char *argv[]){
           }
         }
         for(i=0; i<cityNum; i++){
-          if(check[ant][i] == 0){
+          if(check[ant][i] == 0 && tau[c1][i] != 0){
             ftmp = pow(tau[c1][i], alpha) * pow((1.0 / eucArray[c1][i]), beta[b]) / sum;
             p[c1][i] = ftmp;
             p[i][c1] = ftmp;
+            if(isnan(ftmp))
+              ftmp = 1 / bs;
           }
         }
         // make selection probability array
@@ -219,9 +299,6 @@ int main(int argc, char *argv[]){
     else{ // update best solution, reset count and continue
       bs = min;
       count = 0;
-      for(i=0; i<cityNum; i++){
-        solution[i] = solutions[minNum][i];
-      }
     }
     if(count == maxloop){// end
       break;
@@ -245,8 +322,7 @@ int NNmethod(int *c, int *euc, int num){
   return minNum;
 }
 int calcEuc(double x1, double x2, double y1, double y2){
-  return (int)(sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2)) + 0.5);
-   
+  return (int)(sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2)) + 0.5);   
 }
 \end{lstlisting}
 
