--- a/08/report/report.tex
+++ b/08/report/report.tex
@@ -1,5 +1,5 @@
 \documentclass[a4j]{jarticle}
-\title{進化的アルゴリズムレポート \ 課題7}
+\title{進化的アルゴリズムレポート \ 課題8}
 \author{情報科学類, 3年, 2クラス, 学籍番号：201311403 \ 山岡 洸瑛, Yamaoka
 Kouei}
 \西暦
@@ -46,34 +46,49 @@ tabsize=2
 \begin{document}
 \maketitle
 
-\section*{AS（Ant System）による巡回セールスマン問題の解決}
+\section*{MMAS（MAX-MIN Ant System）による巡回セールスマン問題の解決}
 \section*{実験}
 \subsection*{パラメータの決定}
-巡回セールスマン問題eil51に対してパラメータ$\beta$の最適値を求める．その他のパラメータは与えられたものを使うため省略する．パラメータの調整は，乱数の初期値を変えて10回計算し，その結果を用いて行った．表\ref{beta}に$\beta$を2から5まで変えた時の順回路長（最良解）と反復回数の平均値と標準偏差を示す．表\ref{beta}より順回路長は$\beta=2$で最小になっているが，標準偏差が大きい．$\beta=3$としても順回路長はあまり変わらず，かつ標準偏差が小さくなるため，$\beta=3$とする．なお，シード値は{509, 521, 523, 541, 547, 557, 563, 569,571, 577}とした．
+巡回セールスマン問題eil51に対してパラメータ$\beta$の最適値を求める．その他のパラメータは与えられたものを使うため省略する．パラメータの調整は，乱数の初期値を変えて10回計算し，その結果を用いて行った．表\ref{beta}に$\beta$を2から5まで変えた時の順回路長（最良解）と反復回数の平均値と標準偏差を示す．順回路長と反復回数の平均は共に小数点以下を切り捨てている．なお，シード値は{509, 521, 523, 541, 547, 557, 563, 569,571, 577}とした．
 \begin{table}[H]
  \begin{center}
   \label{beta}
   \caption{各$\beta$毎の実験結果}
   \begin{tabular}[tb]{|c|c|c|c|c|}\hline
-    &$ \beta = 2 $&$ \beta = 3 $&$ \beta = 4 $&$ \beta = 5 $\\\hline
-巡回路長の平均 & 438 & 439 & 441 & 440 \\\hline
-標準偏差 & 4.77 & 3.49 & 4.62 & 4.34 \\\hline
-反復回数の平均 & 2006 & 1900 & 1710 & 1841 \\\hline
-標準偏差 & 418.75 & 337.94 & 489.34 & 505.15 \\\hline
-  \end{tabular}
+ &$ \beta = 2 $&$ \beta = 3 $&$ \beta = 4 $&$ \beta = 5$ \\\hline
+巡回路長の平均 & 427 & 428 & 427 & 428 \\\hline
+標準偏差 & 1.41 & 0.32 & 1.05 & 0.45 \\\hline
+反復回数の平均 & 1700 & 1726 & 1877 & 1666 \\\hline
+標準偏差 & 284.9 & 304.02 & 425.94 & 340.72 \\\hline
+ \end{tabular}
+ \end{center}
+\end{table}
+\par しかし，これだけでは傾向がよくわからなかったため，各シード値につき連続で2回ずつ，計20回計算し，その結果を表\ref{beta2}にまとめた．これより$\beta \geq 3$の時，標準偏差が小さくなっている．しかし$\beta = 2$の時もそれほど大きくなく，平均的にその他よりも良いため，$\beta = 2$とする．
+\begin{table}[H]
+ \begin{center}
+  \label{beta2}
+  \caption{20回の試行における各$\beta$毎の実験結果}
+  \begin{tabular}[tb]{|c|c|c|c|c|}\hline
+ &$ \beta = 2 $&$ \beta = 3 $&$ \beta = 4 $&$ \beta = 5$ \\\hline
+巡回路長の平均 & 427 & 428 & 428 & 428 \\\hline
+標準偏差 & 1.36 & 0.32 & 0.5 & 0.45 \\\hline
+反復回数の平均 & 1708 & 1694 & 1752 & 1664 \\\hline
+標準偏差 & 299.75 & 312.67 & 386.77 & 308.75 \\\hline
+ \end{tabular}
  \end{center}
 \end{table}
 
 \par 以下にパラメータの一覧を示す．念の為，与えられた物も示した．
 \begin{itemize}
  \item $\alpha = 1$
- \item $\beta = 3$
+ \item $\beta = 2$
  \item アリの数$m$ = 都市数$n$
- \item $\rho = 0.5$
+ \item $\rho = 0.02$
+ \item $p_{best} = 0.05$
 \end{itemize}
 
 \subsection*{実験結果}
-示したパラメータで実験を行った．その結果を表\ref{result}に示す．表には各問題を乱数の初期値を変えて10回行い，最良解の順回路長（括弧内は最適解）と反復回数の平均値と標準偏差を示している．また，順回路長については，標準偏差を平均値で割った変動係数も示した．これにより，大まかには全ての問題で標準偏差の大きさが揃っていると言える．
+示したパラメータで実験を行った．その結果を表\ref{result}に示す．表には各問題を乱数の初期値を変えて10回行い，最良解の順回路長（括弧内は最適解）と反復回数の平均値と標準偏差を示している．順回路長と反復回数の平均は共に小数点以下を切り捨てている．また，順回路長については，標準偏差を平均値で割った変動係数も示した．これにより，pr76が少し大きいが，大まかには全ての問題で標準偏差の大きさが揃っていると言える．
 
 \begin{table}[H]
  \begin{center}
@@ -81,11 +96,11 @@ tabsize=2
   \label{result}
   \begin{tabular}[tb]{|c|c|c|c|c|c|} \hline
  & eil51 & pr76 & rat99 & kroA100 & ch130 \\\hline
-巡回路長の平均 & 439（426） & 114921（108159） & 1266（1211） & 22495（21282） & 6473（6110） \\\hline
-標準偏差 & 3.49 & 1061.45 & 7.28 & 58.16 & 53.55 \\\hline
-変動係数 & 0.008 & 0.0092 & 0.0058 & 0.0026 & 0.0083 \\ \hline
-反復回数の平均 & 1900 & 1757 & 1844 & 1988 & 1942 \\\hline
-標準偏差 & 337.94 & 611.57 & 641.99 & 647.78 & 585.08 \\\hline
+巡回路長の平均 & 427（426） & 109368（108159） & 1212（1211） & 21361（21282） & 6174（6110） \\\hline
+標準偏差 & 1.41 & 913.14 & 1.76 & 37.49 & 32.55 \\\hline
+変動係数 & 0.0033 & 0.0083 & 0.0015 & 0.0018 & 0.0053 \\\hline
+反復回数の平均 & 1700 & 2091 & 1757 & 1935 & 2391 \\\hline
+標準偏差 & 284.9 & 281.07 & 189.1 & 110.08 & 402.36 \\\hline
   \end{tabular}
  \end{center}
 \end{table}
@@ -94,48 +109,48 @@ tabsize=2
 各問題の最良解の順回路長の推移のグラフを図\ref{00}から図\ref{44}に示す．なお，シード値は10回の試行における最良解を出したものとした．
 
 \subsubsection*{・eil51}
-シード値は571．最適解426に対して，最良解は435．
+シード値は523．最適解426に対して，最良解は426となり，最適解と一致した．
 \begin{figure}[H]
  \begin{center}
-  \includegraphics[width=15cm, clip, bb=-75 0 442 266]{pic/00.jpg}
+  \includegraphics[width=15cm, clip, bb=-75 0 446 265]{pic/00.jpg}
   \caption{eil51の最良解の推移}
   \label{00}
  \end{center}
 \end{figure}
 \clearpage
 \subsubsection*{・pr76}
-シード値は521．最適解108159に対して，最良解は112608．
+シード値は521．最適解108159に対して，最良解は111464．
 \begin{figure}[H]
  \begin{center}
-  \includegraphics[width=15cm, clip, bb=-75 0 455 266]{pic/11.jpg}
+  \includegraphics[width=15cm, clip, bb=-75 0 454 264]{pic/11.jpg}
   \caption{pr76の最良解の推移}
   \label{11}
  \end{center}
 \end{figure}
 \subsubsection*{・rat99}
-シード値は547．最適解1211に対して，最良解は1251．
+シード値は547．最適解1211に対して，最良解は1213．
 \begin{figure}[H]
  \begin{center}
-  \includegraphics[width=15cm, clip, bb=-75 0 441 265]{pic/22.jpg}
+  \includegraphics[width=15cm, clip, bb=-75 0 441 266]{pic/22.jpg}
   \caption{rat99の最良解の推移}
   \label{22}
  \end{center}
 \end{figure}
 \clearpage
 \subsubsection*{・kroA100}
-シード値は577．最適解21282に対して，最良解は22411．
+シード値は577．最適解21282に対して，最良解は21330．
 \begin{figure}[H]
  \begin{center}
-  \includegraphics[width=15cm, clip, bb=-75 0 453 264]{pic/33.jpg}
+  \includegraphics[width=15cm, clip, bb=-75 0 444 266]{pic/33.jpg}
   \caption{kroA100の最良解の推移}
   \label{33}
  \end{center}
 \end{figure}
 \subsubsection*{・ch130}
-シード値は509．最適解6110に対して，最良解は6372．
+シード値は509．最適解6110に対して，最良解は6207．
 \begin{figure}[H]
  \begin{center}
-  \includegraphics[width=15cm, clip, bb=-75 0 447 266]{pic/44.jpg}
+  \includegraphics[width=15cm, clip, bb=-75 0 455 266]{pic/44.jpg}
   \caption{ch130の最良解の推移}
   \label{44}
  \end{center}
@@ -143,22 +158,35 @@ tabsize=2
 
 
 
-
+\clearpage
 \subsection*{ソースコード}
 リスト1にソースコードを示す．なお，変数宣言や，巡回セールスマン問題の読み込みなど，重要でないと思われる部分は省略している．
-\begin{lstlisting}[caption=AS.c, label=AS, xleftmargin=1cm]
+\begin{lstlisting}[caption=MMAS.c, label=MMAS, xleftmargin=1cm]
 int main(int argc, char *argv[]){
+  const int seeds[10] = {509, 521, 523, 541, 547, 557, 563, 569, 571, 577}; // seeds
+  int b = 0;
+  int sdc = 0;
+  
+  // variable declaration
+  int cityNum; // number of citis
+  const int maxloop = 1000;
 
-  int eucArray[cityNum][cityNum];
-  int check[m][cityNum]; // for check to passed city
+  srand(seeds[sdc]); 
+  // variable declaration
+  int bsf[cityNum]; // best-so-fat
   int solutions[m][cityNum];
   double tau[cityNum][cityNum]; // pheromone
   double p[m][cityNum]; // selection probability
   int tourLength[cityNum];
   int c1, c2; // selected city
-  int bs = INT_MAX; // tour length @best solution
+  int bs, ibs; // tour length @best solution, @iteration
 
   // calc EUC_2D
+  // init diagonal 
+  for(i=0; i<cityNum; i++){
+    eucArray[i][i] = 0;
+  }
+  // calc 
   for(i=0; i<cityNum; i++){
     for(j=i+1; j<cityNum; j++){
       tmp = calcEuc(X[i], X[j], Y[i], Y[j]);
@@ -172,26 +200,27 @@ int main(int argc, char *argv[]){
   solutions[0][0] = 0; // start city 0
   check[0][0] = 1;
   min = 0;
-  for(j=1; j<cityNum; j++){
+  for(i=1; i<cityNum; i++){
     min = NNmethod(check[0], eucArray[min], cityNum); // find min EUC_2D
     check[0][min] = 1; // check city
-    solutions[0][j] = min;
+    bsf[i] = min;
   }
   
   // clac tour length 
   sum = 0;
   for(i=0; i<cityNum; i++){ // calc link(c1, c2) length
-    c1 = solutions[0][i]; 
-    c2 = solutions[0][(i+1)%cityNum];
+    c1 = bsf[i]; 
+    c2 = bsf[(i+1)%cityNum];
     sum += eucArray[c1][c2];
   }
   bs = sum;
   // set initial pheromone
-  ftmp = m / sum;
+  taumax = 1.0 / (bs * rho);
+  taumin = calcTauMin(taumax, cityNum, pbest);
   for(i=0; i<cityNum; i++){
     for(j=i+1; j<cityNum; j++){
-      tau[i][j] = ftmp;
-      tau[j][i] = ftmp;
+      tau[i][j] = taumax;
+      tau[j][i] = taumax;
     }
   }
   // end init pheromone
@@ -230,12 +259,13 @@ int main(int argc, char *argv[]){
           }
         }
         for(i=0; i<cityNum; i++){
-          if(check[ant][i] == 0 && tau[c1][i] != 0){
+          if(check[ant][i] == 0 && tau[c1][i] != 0.0){
             ftmp = pow(tau[c1][i], alpha) * pow((1.0 / eucArray[c1][i]), beta[b]) / sum;
+            if(isnan(ftmp)){
+              ftmp = 1.0 / (bs*rho);
+            }
             p[c1][i] = ftmp;
             p[i][c1] = ftmp;
-            if(isnan(ftmp))
-              ftmp = 1 / bs;
           }
         }
         // make selection probability array
@@ -262,9 +292,35 @@ int main(int argc, char *argv[]){
       tourLength[ant] += eucArray[solutions[ant][0]][solutions[ant][cityNum-1]];
     }
     // end loop for ant
+
+    // search iteration beat
+    ibs = INT_MAX;
+    for(i=0; i<m; i++){
+      if(ibs > tourLength[i]){
+        ibs = tourLength[i];
+        minNum = i;
+      }
+    }
+    
+    // end decision
+    if(bs <= ibs){ // continue 
+      count++;
+    }
+    else{ // reset count and update best solution, taumax, and taumin, 
+      bs = ibs;
+      count = 0;
+      for(i=0; i<cityNum; i++){ 
+        bsf[i] = solutions[minNum][i]; // update best-so-far
+      }
+    }
+    tl[loopcount-1] = bs;
+    if(count == maxloop){// end
+      break;
+    }
     
     // update pheromone
-    // calc each tau according to ants
+    taumax = 1.0 / (rho * ibs);
+    taumin = calcTauMin(taumax, cityNum, pbest);
     // evaporation
     for(i=0; i<m; i++){
       for(j=0; j<cityNum; j++){
@@ -272,40 +328,37 @@ int main(int argc, char *argv[]){
       }
     }
     // add pheromone
-    for(ant=0; ant<m; ant++){
-      ftmp = 1.0 / tourLength[ant];
-      for(i=0; i<cityNum; i++){
-        c1 = solutions[ant][i];
-        c2 = solutions[ant][(i+1)%cityNum];
-        tau[c1][c2] += ftmp;
-        tau[c2][c1] += ftmp;
+    ftmp = 1.0 / ibs;
+    for(i=0; i<cityNum; i++){
+      c1 = solutions[minNum][i];
+      c2 = solutions[minNum][(i+1)%cityNum];
+      tau[c1][c2] += ftmp;
+      tau[c2][c1] += ftmp;
+    }
+    // MAX-MIN
+    for(i=0; i<cityNum; i++){
+      for(j=i+1; j<cityNum; j++){
+        if(tau[i][j] > taumax){
+          tau[i][j] = taumax;
+          tau[j][i] = taumax;
+        }
+        if(tau[i][j] < taumin){
+          tau[i][j] = taumin;
+          tau[j][i] = taumin;
+        }
       }
     }
     // end update pheromone
-
-    // search min
-    min = INT_MAX;
-    for(i=0; i<cityNum; i++){
-      if(min > tourLength[i]){
-        min = tourLength[i];
-        minNum = i;
-      }
-    }
-
-    // end decision
-    if(bs < min){ // continue 
-      count++;
-    }
-    else{ // update best solution, reset count and continue
-      bs = min;
-      count = 0;
-    }
-    if(count == maxloop){// end
-      break;
-    }
   }
   return 0;
 }
+
+/* 
+ *c; checkArray
+ *euc: eucArray[i]
+ num: cityNum
+ return: index of min EUC_2D
+ */
 int NNmethod(int *c, int *euc, int num){
   int i, minNum;
   int m = INT_MAX;
@@ -321,8 +374,19 @@ int NNmethod(int *c, int *euc, int num){
   }
   return minNum;
 }
+
+/*
+  x1, x2, y1, y2: num
+  return: EUC_2D
+*/
 int calcEuc(double x1, double x2, double y1, double y2){
-  return (int)(sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2)) + 0.5);   
+  return (int)(sqrt(pow(x1 - x2, 2) + pow(y1 - y2, 2)) + 0.5);
+   
+}
+
+double calcTauMin(double taumax, int n, double p){
+  double tmp = pow(p, (1.0 / n));
+  return ((1.0 - tmp) * taumax) / ((n/2.0 - 1.0) * tmp);
 }
 \end{lstlisting}
 
